RESOLVED FIXED38299
[Qt] QtWebkit doesn't link with 3D canvas
https://bugs.webkit.org/show_bug.cgi?id=38299
Summary [Qt] QtWebkit doesn't link with 3D canvas
Noam Rosenthal
Reported 2010-04-28 17:48:46 PDT
GraphicsContext3D::isGLES2Compliant() is missing
Attachments
build fi (1.45 KB, patch)
2010-04-28 17:50 PDT, Noam Rosenthal
no flags
Noam Rosenthal
Comment 1 2010-04-28 17:50:57 PDT
Created attachment 54649 [details] build fi
Laszlo Gombos
Comment 2 2010-04-28 21:24:15 PDT
Comment on attachment 54649 [details] build fi Looks good to me, r+.
WebKit Commit Bot
Comment 3 2010-04-29 04:05:23 PDT
Comment on attachment 54649 [details] build fi Clearing flags on attachment: 54649 Committed r58500: <http://trac.webkit.org/changeset/58500>
WebKit Commit Bot
Comment 4 2010-04-29 04:05:27 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.