2010-04-29  Noam Rosenthal  <noam.rosenthal@nokia.com>

Reviewed by Laszlo Gombos.

        [Qt] QtWebkit doesn't link with 3D canvas
        https://bugs.webkit.org/show_bug.cgi?id=38299

        Added implementation for GraphicsContext3D::isGLES2Compliant, which returns the correct value based on a Qt #define.

        No new tests: build fix

        * platform/graphics/qt/GraphicsContext3DQt.cpp:
        (WebCore::GraphicsContext3D::isGLES2Compliant):

Canonical link: https://commits.webkit.org/49755@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@58500 268f45cc-cd09-0410-ab3c-d52691b4dbfc